--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,55 +1,48 @@
-version: '3.4'
+version: '3'
 
-x-backend:
-  &backend
-  build:
-    context: .
-    dockerfile: Dockerfile.dev
-  env_file: .env
-  environment:
-    RAILS_ENV: development
-    REDIS_URL: redis://redis:6379/1
-  restart: on-failure:3
-  stdin_open: true
-  tty: true
-  volumes:
-    - .:/backend:rw
-    - bundle_cache:/bundle
 
 services:
   backend:
-    <<: *backend
+    image: cirobessa/rails-backend
     ports:
       - 3000:3000/tcp
+    env_file: .env
+    environment:
+      RAILS_ENV: development
+      REDIS_URL: redis://redis:6379/1
     depends_on:
       - db
+      - redis
 
   db:
     image: postgres:11.2
     env_file: .env
-  #  environment:
-  #    POSTGRES_USER: postgres
-  #    POSTGRES_PASSWORD: secret
-    restart: always
     volumes:
       - postgres:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    environment:
+      PGDATA: /var/lib/postgresql/data/pgdata
 
   sidekiq:
-    <<: *backend
+    image: cirobessa/rails-backend
     command: bundle exec sidekiq
     depends_on:
       - redis
       - backend
+      - db
+    env_file: .env
+    environment:
+      RAILS_ENV: development
+      REDIS_URL: redis://redis:6379/1
 
   redis:
     image: 'redis:6.2.13-alpine'
-    #image: 'redis:5.0-alpine'
     command: redis-server
-    volumes:
-      - redis:/data
+    ports:
+      - "6379:6379"
 
 volumes:
-  bundle_cache:
   postgres:
-  redis:
+  db_data:
 
